--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,9 @@ twitter: wwwhimsydoodle
 github:  Whimsical-Doodles
 
 markdown: kramdown
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
